whatrequires-doc.diff
===================================================================

diff --git a/doc/rpm.8 b/doc/rpm.8
index 4e038f4..24ffa50 100644
--- a/doc/rpm.8
+++ b/doc/rpm.8
@@ -581,6 +581,11 @@ Query all packages that provide the \fICAPABILITY\fR capability.
 .TP
 \fB--whatrequires \fICAPABILITY\fB\fR
 Query all packages that require \fICAPABILITY\fR for proper functioning.
+.br
+Note that this does not return what requires a given package.
+A package usually provides multiple capabilities and file-names on which
+other packages may depend. To see the complete dependencies
+for a package, use \fB-e --test \fIPACKAGE_NAME\fB\fR
 .SS "PACKAGE QUERY OPTIONS:"
 .PP
 .TP

--- a/doc/rpm.8
+++ b/doc/rpm.8
@@ -581,6 +581,11 @@ Query all packages that provide the \fICAPABILITY\fR capability.
 .TP
 \fB--whatrequires \fICAPABILITY\fB\fR
 Query all packages that require \fICAPABILITY\fR for proper functioning.
+.br
+Note that this does not return what requires a given package.
+A package usually provides multiple capabilities and file-names on which
+other packages may depend. To see the complete dependencies
+for a package, use \fB-e --test \fIPACKAGE_NAME\fB\fR
 .SS "PACKAGE QUERY OPTIONS:"
 .PP
 .TP
