--- a/po/ca.po
+++ b/po/ca.po
@@ -26,6 +26,7 @@ msgstr ""
 "PO-Revision-Date: 2009-04-25 17:36+0100\n"
 "Last-Translator: Agustí Grau <fedora@softcatala.org>\n"
 "Language-Team: Catalan <fedora@softcatala.net>\n"
+"Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1750,8 +1751,8 @@ msgstr ""
 #, c-format
 msgid "region offset: BAD, tag %d type %d offset %d count %d\n"
 msgstr ""
-"desplaçament de regió: dolent, etiqueta %d tipus %d desplaçament %d compte %"
-"d\n"
+"desplaçament de regió: dolent, etiqueta %d tipus %d desplaçament %d compte "
+"%d\n"
 
 #: lib/package.c:273 lib/signature.c:205
 #, c-format
@@ -2883,8 +2884,8 @@ msgstr ""
 #, c-format
 msgid "installing package %s needs %<PRIu64> inodes on the %s filesystem"
 msgstr ""
-"el paquet a instal·lar %s necessita %<PRIu64> nodes-i al sistema de fitxers %"
-"s"
+"el paquet a instal·lar %s necessita %<PRIu64> nodes-i al sistema de fitxers "
+"%s"
 
 #: lib/rpmps.c:360
 #, c-format
@@ -3264,8 +3265,8 @@ msgstr "%s: no s'ha pogut llegir la capçalera a 0x%x\n"
 #, c-format
 msgid "error(%d) setting header #%d record for %s removal\n"
 msgstr ""
-"error(%d) en establir el registre de la capçalera #%d per a la supressió de %"
-"s\n"
+"error(%d) en establir el registre de la capçalera #%d per a la supressió de "
+"%s\n"
 
 #: lib/rpmdb.c:2625
 #, c-format
@@ -3381,14 +3382,15 @@ msgstr "%s té un valor de tipus «long» massa gran o massa petit, s'ignorarà\
 #: lib/backend/dbconfig.c:342
 #, c-format
 msgid "%s has too large or too small integer value, skipped\n"
-msgstr "%s té un valor de tipus «enter» massa llarg o massa petit, s'ignorarà\n"
+msgstr ""
+"%s té un valor de tipus «enter» massa llarg o massa petit, s'ignorarà\n"
 
 #: lib/backend/sqlite.c:611
 #, c-format
 msgid "Unable to get lock on db %s, retrying... (%d)\n"
 msgstr ""
-"No s'ha pogut obtenir un bloqueig en la base de dades %s, reintentant... (%"
-"d)\n"
+"No s'ha pogut obtenir un bloqueig en la base de dades %s, reintentant... "
+"(%d)\n"
 
 #: lib/backend/sqlite.c:709
 #, c-format
@@ -3924,8 +3926,8 @@ msgstr "no verifiquis la signatura de la capçalera i les dades"
 
 #~ msgid "Attempting to mark %s as installed in score board(%p).\n"
 #~ msgstr ""
-#~ "S'està intentant marcar %s com a instal·lat a la taula de puntuacions(%"
-#~ "p).\n"
+#~ "S'està intentant marcar %s com a instal·lat a la taula de puntuacions"
+#~ "(%p).\n"
 
 #~ msgid "Attempting to mark %s as erased in score board(%p).\n"
 #~ msgstr ""
@@ -4173,8 +4175,8 @@ msgstr "no verifiquis la signatura de la capçalera i les dades"
 
 #~ msgid "package %s pre-transaction syscall(s): %s failed: %s"
 #~ msgstr ""
-#~ "crides de sistema anteriors a la transacció del paquet %s: ha fallat %s: %"
-#~ "s"
+#~ "crides de sistema anteriors a la transacció del paquet %s: ha fallat %s: "
+#~ "%s"
 
 #~ msgid "Please contact rpm-maint@lists.rpm.org\n"
 #~ msgstr "Si us plau, contacteu amb rpm-maint@listis.rpm.org\n"
