--- a/po/da.po
+++ b/po/da.po
@@ -6,6 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2001-04-05 23:03GMT\n"
 "Last-Translator: Claus Hindsgaul <claus_h@image.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1113,8 +1114,8 @@ msgstr "linie %d: anden %%prep\n"
 msgid ""
 "line %d: Dependency tokens must begin with alpha-numeric, '_' or '/': %s\n"
 msgstr ""
-"linie %d: Afhængigheds-symbol skal starte med alfanumerisk, '_' eller '/': %"
-"s\n"
+"linie %d: Afhængigheds-symbol skal starte med alfanumerisk, '_' eller '/': "
+"%s\n"
 
 #: build/parseReqs.c:135
 #, c-format
