--- a/po/de.po
+++ b/po/de.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2009-01-11 01:27+0100\n"
 "Last-Translator: Fabian Affolter <fab@fedoraproject.org>\n"
 "Language-Team: German <fedora-trans-de@redhat.com>\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1130,8 +1131,8 @@ msgstr "Zeile %d: Zweites %%prep\n"
 msgid ""
 "line %d: Dependency tokens must begin with alpha-numeric, '_' or '/': %s\n"
 msgstr ""
-"Zeile %d: Abhängigkeiten müssen alphanumerisch, mit '_' oder '/' beginnen: %"
-"s\n"
+"Zeile %d: Abhängigkeiten müssen alphanumerisch, mit '_' oder '/' beginnen: "
+"%s\n"
 
 #: build/parseReqs.c:135
 #, c-format
@@ -2833,8 +2834,8 @@ msgstr ""
 #, c-format
 msgid "file %s from install of %s conflicts with file from package %s"
 msgstr ""
-"Datei %s aus der Installation von %s kollidiert mit der Datei aus dem Paket %"
-"s"
+"Datei %s aus der Installation von %s kollidiert mit der Datei aus dem Paket "
+"%s"
 
 #: lib/rpmps.c:341
 #, c-format
