--- a/po/es.po
+++ b/po/es.po
@@ -10,6 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2009-04-18 12:49-0300\n"
 "Last-Translator: Domingo Becker <domingobecker@gmail.com>\n"
 "Language-Team: Spanish <fedora-trans-es@redhat.com>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
