--- a/po/ko.po
+++ b/po/ko.po
@@ -6,6 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2002-03-04 17:17+0900\n"
 "Last-Translator: Jong-Hoon Ryu <redhat4u@netian.com>\n"
 "Language-Team: GNU Translation project <ko@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=EUC-KR\n"
 "Content-Transfer-Encoding: 8-bit\n"
@@ -2400,15 +2401,15 @@ msgstr ""
 #, fuzzy, c-format
 msgid "%s scriptlet failed, signal %d\n"
 msgstr ""
-"%2$s-%3$s-%4$s의 %1$s 스크립틀릿(scriptlet) 실행에 실패했습니다, 종료 상황 %5"
-"$d\n"
+"%2$s-%3$s-%4$s의 %1$s 스크립틀릿(scriptlet) 실행에 실패했습니다, 종료 상황 "
+"%5$d\n"
 
 #: lib/psm.c:761
 #, fuzzy, c-format
 msgid "%s scriptlet failed, exit status %d\n"
 msgstr ""
-"%2$s-%3$s-%4$s의 %1$s 스크립틀릿(scriptlet) 실행에 실패했습니다, 종료 상황 %5"
-"$d\n"
+"%2$s-%3$s-%4$s의 %1$s 스크립틀릿(scriptlet) 실행에 실패했습니다, 종료 상황 "
+"%5$d\n"
 
 #: lib/psm.c:1260
 #, fuzzy, c-format
