--- a/po/nl.po
+++ b/po/nl.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2008-09-03 22:17+0200\n"
 "Last-Translator: Peter van Egdom <p.van.egdom@gmail.com>\n"
 "Language-Team: Dutch <fedora-trans-list@redhat.com>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
