--- a/po/pl.po
+++ b/po/pl.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2009-06-18 22:14+0200\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
